# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: calc.py  cli.py  engine.py  even.py  test_my_code.py
brain_games/games/: ar_progression.py  calc.py  constants.py  even.py  functions.py  gcd.py  prime.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  engine.py
