[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["OlegKarush <karusholeg@mail.ru>"]
readme = "README.md"
packages = [ 
{include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
